Changelog
=========

3.1.1 (unreleased)
------------------

- Nothing changed yet.


3.1 (2013-07-07)
----------------


- Test fixes [deroiste, ckirchhoff]
- Remove 3 Klassifications [do3cc]
- Institution are multivalued fields [do3cc]
- newer DDC [do3cc]


3.0.6 (2013-05-14)
------------------

- Nothing changed yet.


3.0.5 (2013-05-14)
------------------

- Updated sparql search
  [do3cc]


3.0.4 (2013-05-03)
------------------

- Declared dependency
  [reinhardt]
- Updated sparql search
  [do3cc]


3.0.3 (2013-02-18)
------------------

- Nothing changed yet.


3.0.2 (2013-02-15)
------------------

- More xdv removal.
  [pbauer]


3.0.1 (2013-02-15)
------------------

- Remove xdv things.
  [gerken]


3.0.0 (2013-02-15)
------------------

- New release for Plone 4.2 and many changes
  [gerken]


2.5.11 (2013-01-30)
-------------------

- Nothing changed yet.


2.5.10 (2013-01-23)
-------------------

- Nothing changed yet.


2.5.9.5 (2012-09-10)
--------------------

- Nothing changed yet.


2.5.9.4 (2012-08-30)
--------------------

- Nothing changed yet.


2.5.9.3 (2012-08-30)
--------------------

- Nothing changed yet.


2.5.9.2 (2012-08-30)
--------------------

- More manifest stuff.
  [gerken]


2.5.9.1 (2012-08-30)
--------------------

- Updated manifest in.
  [gerken]


2.5.9 (2012-08-30)
------------------

- Nothing changed yet.


2.5.8 (2012-08-20)
------------------

- Uprade step to handle removal of image fields
  [gerken]


2.5.7 (2012-08-14)
------------------

- total_seconds is not available in python 2.6
  [gerken]


2.5.6 (2012-08-14)
------------------

- Bugfix for plone.app.async.
  [gerken]


2.5.5 (2012-08-14)
------------------

- Nothing changed yet.


2.5.4 (2012-08-14)
------------------

- Improved sehepunkte import, should now stop to fail
  [gerken]


2.5.3 (2012-07-22)
------------------

- Added more handlers to SPARQL.
  [gerken]
- Improved logging.
  [gerken]
- Removed tests that did not add value.
  [gerken]