@@ -186,3 +186,8 @@ class IRecensioView(Interface):
     def getSupportedLanguages():
         """ Get the languages defines in the recensio-setting which our
         content types support."""
+
+
+class IDigitoolView(Interface):
+    """ Supports exporting XML to digitool """
+
