@@ -4,7 +4,8 @@ Changelog
 3.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- prepared export of xml files for content. We don't have the final xml files
+ yet, so it is only a stub (pilz)
 
 
 3.1 (2013-07-07)
